fix login view on small screen

--- a/assembl/static2/css/components/buttons.scss
+++ b/assembl/static2/css/components/buttons.scss
@@ -4,6 +4,7 @@
   font-size: $font-size-xs;
   letter-spacing: 1px;
   padding: 10px 50px;
+  text-align: center;
   text-decoration: none;
   text-transform: $btn-text-transform;
 
@@ -29,6 +30,7 @@
   font-size: $font-size-xs;
   letter-spacing: 1px;
   padding: 10px 50px;
+  text-align: center;
   text-transform: $btn-text-transform;
 
   &:focus {
@@ -41,6 +43,7 @@
   font-size: $font-size-xs;
   letter-spacing: 1px;
   padding: 10px 50px;
+  text-align: center;
   text-transform: $btn-text-transform;
 }
 
@@ -103,3 +106,21 @@
     color: $btn-dark-txt;
   }
 }
+
+@media screen and (max-width: 420px) {
+  .button-link {
+    padding: 10px 30px;
+    width: 100%;
+  }
+
+  .button-submit {
+    padding: 10px 30px;
+    width: 100%;
+  }
+
+  .button-cancel {
+    padding: 10px 30px;
+    width: 100%;
+  }
+}
+
